Fix too small container

--- a/client/src/app/site/pages/meetings/modules/poll/components/poll-filtered-votes-chart/poll-filtered-votes-chart.component.scss
+++ b/client/src/app/site/pages/meetings/modules/poll/components/poll-filtered-votes-chart/poll-filtered-votes-chart.component.scss
@@ -22,7 +22,7 @@
     grid-template-areas: 'votes options';
     grid-template-columns: auto auto;
     @media (max-width: 700px) {
-        grid-template-areas: 'votes .' '. options';
+        grid-template-areas: 'votes votes' 'options options';
         grid-template-columns: max-content;
     }
 }
@@ -42,4 +42,4 @@
 
 .grid-options-area {
     grid-area: options;
-}
+  }
